@@ -1,4 +1,4 @@
-#line 1 "inc/Module/Install/Base.pm - C:/Perl580/site/lib/Module/Install/Base.pm"
+#line 1 "inc/Module/Install/Base.pm - c:/Perl/site/lib/Module/Install/Base.pm"
 # $File: //depot/cpan/Module-Install/lib/Module/Install/Base.pm $ $Author: autrijus $
 # $Revision: #9 $ $Change: 1665 $ $DateTime: 2003/08/18 07:52:47 $ vim: expandtab shiftwidth=4
 
