@@ -1,5 +1,5 @@
 
-# $Id: Advanced.pm,v 1.11 2003-11-01 16:23:53-05 kingpin Exp kingpin $
+# $Id: Advanced.pm,v 1.12 2003/12/30 04:18:40 Daddy Exp $
 
 =head1 NAME
 
