@@ -27,25 +27,40 @@ $iDebug = 0;
 $iDump = 0;
 # This query usually returns 1 page of results:
 &my_test('normal', '', 1, 24, $iDebug, $iDump,
-        {
-         search => 'adv',
-         contrib => 'Diane Lane',
-         range => 7,
-        },
+           {
+            search => 'adv',
+            contrib => 'Diane Lane',
+            range => 7,
+           },
         );
 cmp_ok(1, '<=', $WWW::Search::Test::oSearch->approximate_hit_count,
        'approximate_hit_count');
 cmp_ok($WWW::Search::Test::oSearch->approximate_hit_count, '<=', 24,
        'approximate_hit_count');
 # goto ALL_DONE;
+my @ao = $WWW::Search::Test::oSearch->results();
+cmp_ok(0, '<=', scalar(@ao), 'got any results');
+foreach my $oResult (@ao)
+  {
+  like($oResult->url, qr{\Ahttp://tv\.yahoo\.com},
+       'result URL is http');
+  cmp_ok($oResult->title, 'ne', '',
+         'result title is not empty');
+  cmp_ok($oResult->description, 'ne', '',
+         'result description is not empty');
+  } # foreach
 MULTI_TEST:
 $iDebug = 0;
 $iDump = 0;
 # This query usually returns TWO pages of results:
-&my_test('normal', 'fairly', 26, 49, $iDebug, $iDump);
+&my_test('normal', '', 26, undef, $iDebug, $iDump,
+           {
+            search => 'adv',
+            title => 'Oddparents',
+            range => 14,
+           },
+        );
 cmp_ok(26, '<=', $WWW::Search::Test::oSearch->approximate_hit_count,
-       'approximate_hit_count');
-cmp_ok($WWW::Search::Test::oSearch->approximate_hit_count, '<=', 49,
        'approximate_hit_count');
 
 ALL_DONE:
