@@ -1,3 +1,7 @@
+2003-12-29  Kingpin  <mthurn@verizon.net>
+
+	* lib/WWW/Search/Yahoo/TV/Echostar.pm (parse_tree): fix date parsing for year-end wraparound!
+
 2003-11-01  Kingpin  <mthurn@verizon.net>
 
 	* lib/WWW/Search/Yahoo/News/Advanced.pm (native_retrieve_some): follow next page of results
